[gd_scene load_steps=2 format=3 uid="uid://ckhrj1kbj4drn"]

[ext_resource type="Script" uid="uid://i1mbv8yomcxu" path="res://scripts/titlebuttons.gd" id="1_4ignj"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ignj")

[node name="CreateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 197.0
offset_right = 858.0
offset_bottom = 356.0
text = "Create Game"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 373.0
offset_right = 859.0
offset_bottom = 532.0
text = "Join Game"

[node name="UsernameInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 96.0
offset_right = 824.0
offset_bottom = 178.0
placeholder_text = "username"

[node name="GameIdInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 544.0
offset_right = 860.0
offset_bottom = 626.0
placeholder_text = "game id (when joining)"
